# python-prompting

./: .gitignore  01-cohere.ipynb  02-palm.ipynb  Makefile  app.py  prompt.db  pyproject.toml
app/: __init__.py  cohere.py  db.py  llm.py  palm.py
